--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,5 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  color: #333;
-  text-align: center;
-  padding: 20px;
-}
-
 h1 {
-  color: #0078D7;
+  color: #6594e0;/*文字色*/
+  /*線の種類（点線）2px 線色*/
+  border-bottom: dashed 2px #6594e0;
 }
